# C-Engine

./: LICENSE
Engine/: .ycm_extra_conf.py  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Engine.cpp  Engine.h  Map.cpp  Map.h  Messanger.h  ObjectManager.cpp  ObjectManager.h  RenderSystem.cpp  RenderSystem.h  Sprite.cpp  Sprite.h  Status.cpp  Status.h  Tools.cpp  Tools.h  Transform.h  assets.xml  game_objects.xml  main.cpp  makefile  settings.xml  sprite_list.xml  sprite_sheet.xml  test  test.c  test.cpp
Engine/AssetManager/: AssetManager.cpp  AssetManager.h
Engine/Assets/: .assets.xml.swp  .game_objects.xml.swp  .prefabs.xml.swp  .scene_prefabs.xml.swp  .settings.xml.swp  .sprite_list.xml.swp  .sprite_sheet.xml.swp  assets.xml  game_objects.xml  prefabs.xml  scene_prefabs.xml  sprite_list.xml  sprite_sheet.xml
Engine/Components/: Sprite.cpp  Sprite.h
Engine/Managers/: .Manager.h.swp  .SceneManager.cpp.swp  Manager.h  ObjectManager.h  SceneManager.h
Engine/SDLManager/: SDLManager.cpp  SDLManager.h
Engine/Systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  System.h
Engine/include/: .rapidxml-1.13.swp  AssetManager.h  Component.h  Engine.h  InputSystem.h  Logic.h  LogicSystem.h  Manager.h  Map.h  Messanger.h  Object.h  ObjectManager.h  RenderSystem.h  SDLManager.h  Scene.h  SceneManager.h  Sprite.h  System.h  Test_logic.h  Tools.h
Engine/src/: AssetManager.cpp  Engine.cpp  LogicSystem.cpp  Object.cpp  ObjectManager.cpp  RenderSystem.cpp  SDLManager.cpp  SceneManager.cpp  Sprite.cpp  System.cpp  Test_Logic.cpp  Tools.cpp  main.cpp
